force-app/main/default/objects/Training_Session__c/Training_Session__c.object-meta.xml
<CustomObject>
    <label>Training Session</label>
    <nameField>
        <label>Session Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>