force-app/main/default/objects/Training_Session__c/fields/Learning_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Learning_Objectives__c</fullName>
    <label>Learning Objectives</label>
    <type>TextArea</type>
</CustomField>