force-app/main/default/objects/Training_Session__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participants</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Sessions (Participants)</relationshipLabel>
    <relationshipName>Training_Sessions1</relationshipName>
    <type>Lookup</type>
</CustomField>