force-app/main/default/objects/Training_Session__c/fields/Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Training Sessions</relationshipLabel>
    <relationshipName>Training_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>